[workspace]
members               = ["contracts/*"]

[workspace.dependencies]
cosmwasm-schema       = "1.4.0"
cosmwasm-std          = { version = "1.4.0", features = ["cosmwasm_1_2"]}
# cosmwasm-storage      = "1.1.3"
cw-asset              = "3.0.0"
cw-storage-plus       = { version = "1.1.0", features = ["macro"]}
cw-utils              = "1.0.1"
serde-json-wasm       = "1.0.0"
cw2                   = "1.0.1"
schemars              = "0.8.10"
serde                 = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror             = { version = "1.0.31" }
rhaki-cw-plus         = "0.6.3"

astroport             = "2.8.0"

cw-multi-test         = "0.16.2"
